snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-sources.jar.sha512
99e29cf49618735670d38d5c75d76b48459e63ccfb56c371e61b8c5ec4341cd2ee727669377c3f034337e61b0fdeda4f07b08f6fe694d5166092dd21b90f6d7d